# tokamak

./: .gitignore  README.md  pyproject.toml  requirements.txt
.cursor/.rules/: tomakpit.md
app/: __init__.py  main.py
app/domain/: __init__.py  constants.py  geometry.py  params.py  validate.py
app/render/: __init__.py  plan_preview.py  svg_export.py
